objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>This field is to maintain the status account.</description>
        <inlineHelpText>Test Help Text</inlineHelpText>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_Industry_Classification__c</fullName>
        <label>Company Industry Classification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_NZBN__c</fullName>
        <label>Company NZBN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <label>Company Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Start_Date__c</fullName>
        <label>Company Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Status__c</fullName>
        <label>Company Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VoluntaryAdministration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InReceivership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InLiquidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InStatutoryAdministration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RemovedClosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Core Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers (Core Dealer)</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Abbreviation__c</fullName>
        <label>Dealer Abbreviation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_City__c</fullName>
        <label>Dealer City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <label>Dealer Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <label>Dealer Group</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <label>Dealer Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Town__c</fullName>
        <label>Dealer Town</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Toyota – New Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota – Used Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota - Parts &amp; Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus – L-Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus – Parts &amp; Service</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Dealership</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Point_ID__c</fullName>
        <label>Delivery Point ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Free_Phone__c</fullName>
        <label>Free Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GST_Number__c</fullName>
        <label>GST Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gone_No_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gone No Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point_Date__c</fullName>
        <label>Last Touch Point Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point_From__c</fullName>
        <label>Last Touch Point From</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapGrid_X__c</fullName>
        <label>MapGrid X</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MapGrid_Y__c</fullName>
        <label>MapGrid Y</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meshblock_Code__c</fullName>
        <label>Meshblock Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PMA_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMA Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Dealership</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (PMA Dealer)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Dealership</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Preferred Dealer)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relevant_Industry__c</fullName>
        <label>Relevant Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <description>Description</description>
        <inlineHelpText>Test Help Text</inlineHelpText>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOA_Code__c</fullName>
        <label>SOA Code</label>
        <picklist>
            <picklistValues>
                <fullName>VALID-U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VALID-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVALID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGNORE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOA_Reason__c</fullName>
        <label>SOA Reason</label>
        <picklist>
            <picklistValues>
                <fullName>CHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Receivership</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Toyota_Type__c</fullName>
        <label>Toyota Type</label>
        <picklist>
            <picklistValues>
                <fullName>Core Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts and Service Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trading_As__c</fullName>
        <label>Trading As</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Toyota_Type__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Company_Number__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>GST_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Large Corporate,SME,Government,Lease Company</value>
        </filters>
        <label>Organisations</label>
    </listViews>
    <listViews>
        <fullName>Dealerships</fullName>
        <columns>Dealer_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Core_Dealer__c</columns>
        <columns>Dealer_City__c</columns>
        <columns>Dealer_Town__c</columns>
        <columns>Dealer_Number__c</columns>
        <columns>Toyota_Type__c</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Dealership</value>
        </filters>
        <label>Dealerships</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private_Individuals</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email__c</columns>
        <columns>PMA_Dealer__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Private Individual,Joint Owners</value>
        </filters>
        <label>Private Individuals</label>
    </listViews>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealership</fullName>
        <active>true</active>
        <label>Dealership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Private_Individual</fullName>
        <active>true</active>
        <label>Private Individual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>